--- a/iteration3/templates/index.html
+++ b/iteration3/templates/index.html
@@ -1,54 +1,61 @@
-﻿<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>基坑监测综合管理平台</title>
+      <script type="text/javascript" src="../static/js/jquery.js"></script>
+    <link rel="stylesheet" href="../static/css/comon0.css" />
+  </head>
+  <script type="text/javascript" src="../static/js/loading.js"></script>
+  <script type="text/javascript" src="../static/js/echarts.min.js"></script>
+  <script type="text/javascript" src="../static/js/china.js"></script>
+  <body>
+    <!-- 头部 -->
+    <header>
+      <h1>数据可视化-ECharts</h1>
+      <div class="show-time"></div>
+      <script>
+        var t = null;
+        t = setTimeout(time, 1000); //开始运行
+        function time() {
+          clearTimeout(t); //清除定时器
+          dt = new Date();
+          var y = dt.getFullYear();
+          var mt = dt.getMonth() + 1;
+          var day = dt.getDate();
+          var h = dt.getHours(); //获取时
+          var m = dt.getMinutes(); //获取分
+          var s = dt.getSeconds(); //获取秒
+          document.querySelector(".show-time").innerHTML =
+            "当前时间：" +
+            y +
+            "年" +
+            mt +
+            "月" +
+            day +
+            "日-" +
+            h +
+            "时" +
+            m +
+            "分" +
+            s +
+            "秒";
+          t = setTimeout(time, 1000); //设定定时器，循环运行
+        }
+      </script>
+    </header>
 
-<head>
-    <meta charset="utf-8">
-    <title>桥梁无线监测综合管理平台</title>
-    <script type="text/javascript" src="../static/js/jquery.js"></script>
-    <link rel="stylesheet" href="../static/css/comon0.css">
-</head>
-<script type="text/javascript" src="../static/js/loading.js"></script>
-<script type="text/javascript" src="../static/js/echarts.min.js"></script>
-<script type="text/javascript" src="../static/js/china.js"></script>
+    <!-- 页面主体 -->
 
-
-<body>
-
-<div class="canvas" style="opacity: 0.9">
-    <iframe frameborder="0" src="../static/js/index.html" style="width: 100%; height: 100%"></iframe>
-</div>
-
-<div class="loading">
-    <div class="loadbox"><img src="../static/picture/loading.gif">正在加载</div>
-</div>
-
-<div class="head">
-
-    <h1>{{title}}</h1>
-
-    <div class="weather">
-        <span id="showTime"></span>
-    </div>
-
-    <script type="text/javascript" src="../static/js/showtime.js"></script>
-
-</div>
-
-<div class="mainbox">
-    <ul class="clearfix">
-
-        <li>
-            <div class="boxall" style="height: 4rem">
-                <div class="alltitle">{{form.echart1.title}}</div>
-                <div class="allnav" id="echart1"></div>
-                <div class="boxfoot"></div>
-            </div>
-            <div class="boxall" style="height: 4rem">
-                <div class="alltitle">{{form.echart2.title}}</div>
-                <div class="allnav" id="echart2"></div>
-                <div class="boxfoot"></div>
-            </div>
-        </li>
+        <!-- map模块 -->
+        <div class="map">
+          <div class="map1"><img src="../static/picture/bridge.png"></div>
+          <div class="map2"><img src="../static/picture/data_show.png"></div>
+        </div>
+      </div>
+      <!-- 右侧盒子 -->
+       </li>
 
         <li>
                 <div class="bar">
